# CAEN-WaveDump-Binary-Parser

./: .gitignore  CMakeLists.txt
cmake/: WDBinaryParserConfig.cmake.in
inc/: CaenBoard.h  CaenBoardMap.hpp  CaenWD.h
src/: CMakeLists.txt  CaenParser.cpp
